<resources>
    <string name="app_name">poe1</string>
    <string name="description">Description</string>
    <string name="time_sheet_entry">Time Sheet Entry</string>
    <string name="name">Name</string>
    <string name="start_date">Start Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_date">End Date</string>
    <string name="end_time">End Time</string>
    <string name="save_entry">Save Entry</string>
    <string name="take_pic">Take Pic</string>
    <string name="advcamera">AdvCamera</string>
    <string name="view_record">View Record</string>
    <string name="take_a_pic">Take A Pic</string>
    <string name="upload_image">Upload Image</string>
    <string name="choose_image">Choose Image</string>
    <string name="login">Login</string>
    <string name="sign_in_to_continue">Sign In To Continue</string>
    <string name="click_to_login">Click To Login</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="not_a_user">Not A User</string>
    <string name="create_a_new_account">Create A New Account</string>
    <string name="registration_name">Registration Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="registration_password">Registration Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="registration_confirm_password">Registration Confirm Password</string>
    <string name="registration_email">Registration Email</string>
    <string name="registration_enter_password">Registration Enter Password</string>
    <string name="enter_username_email">Enter Username/Email</string>
    <string name="username_email">Username/Email</string>
    <string name="enter_username">Enter username</string>
    <string name="username">username</string>
    <string name="enter_minimum_hours">enter minimum hours</string>
    <string name="enter_maximum_hours">enter maximum hours</string>
    <string name="save">Save</string>
    <string name="daily_goals">Daily goals</string>
    <string name="clear">Clear</string>
    <string name="set_goals">Set Goals</string>
    <string name="back">Back</string>
</resources>