<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".Home">

    <EditText
        android:id="@+id/edDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:textColor="@color/white"
        android:ems="10"
        android:hint="@string/description"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#29F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.193" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_sheet_entry"
        android:fontFamily="cursive"
        android:textColor="#29F"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <EditText
        android:id="@+id/edName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:ems="10"
        android:hint="@string/name"
        android:backgroundTint="@color/white"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#29F"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/edDesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="262dp"
        android:layout_height="48dp"
        android:entries="@array/spinner_items"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edDesc"
        app:layout_constraintVertical_bias="0.049" />


    <Button
        android:id="@+id/btnStartDate"
        android:layout_width="133dp"
        android:layout_height="55dp"
        android:backgroundTint="#29F"
        android:text="@string/start_date"
        android:textColor="#3E2723"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.152"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        app:layout_constraintVertical_bias="0.125" />

    <Button
        android:id="@+id/btnStartTime"
        android:layout_width="136dp"
        android:layout_height="54dp"
        android:layout_marginEnd="12dp"
        android:backgroundTint="#29F"
        android:text="@string/start_time"
        android:textColor="#3E2723"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.37"
        app:layout_constraintStart_toEndOf="@+id/btnStartDate"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        app:layout_constraintVertical_bias="0.125" />


    <Button
        android:id="@+id/btnEndDate"
        android:layout_width="131dp"
        android:layout_height="59dp"
        android:layout_marginBottom="184dp"
        android:backgroundTint="#29F"
        android:text="@string/end_date"
        android:textColor="#3E2723"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.149"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStartDate"
        app:layout_constraintVertical_bias="0.096" />

    <Button
        android:id="@+id/btnEndTime"
        android:layout_width="135dp"
        android:layout_height="59dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="184dp"
        android:backgroundTint="#29F"
        android:text="@string/end_time"
        android:textColor="#3E2723"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.395"
        app:layout_constraintStart_toEndOf="@+id/btnEndDate"
        app:layout_constraintTop_toBottomOf="@+id/btnStartTime"
        app:layout_constraintVertical_bias="0.109" />

    <Button
        android:id="@+id/btnSaveEntry"
        android:layout_width="132dp"
        android:layout_height="54dp"
        android:layout_marginStart="40dp"
        android:backgroundTint="#29F"
        android:text="@string/save_entry"
        android:textColor="#3E2723"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEndDate"
        app:layout_constraintVertical_bias="0.053" />

    <Button
        android:id="@+id/btnAdvCamera"
        android:layout_width="129dp"
        android:layout_height="55dp"
        android:backgroundTint="#29F"
        android:text="@string/advcamera"
        android:textColor="#3E2723"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.381"
        app:layout_constraintStart_toEndOf="@+id/btnSaveEntry"
        app:layout_constraintTop_toBottomOf="@+id/btnEndTime"
        app:layout_constraintVertical_bias="0.049" />

    <Button
        android:id="@+id/btnRead"
        android:layout_width="133dp"
        android:layout_height="56dp"
        android:layout_marginBottom="112dp"
        android:backgroundTint="#29F"
        android:inputType="textMultiLine"
        android:text="@string/view_record"
        android:textColor="#3E2723"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.143"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSaveEntry"
        app:layout_constraintVertical_bias="0.153"
        tools:ignore="TextViewEdits" />

    <Button
        android:id="@+id/btnGoal"
        android:layout_width="135dp"
        android:layout_height="56dp"
        android:backgroundTint="#29F"
        android:text="@string/set_goals"
        android:textColor="#3E2723"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.414"
        app:layout_constraintStart_toEndOf="@+id/btnRead"
        app:layout_constraintTop_toBottomOf="@+id/btnAdvCamera"
        app:layout_constraintVertical_bias="0.057" />

    <Button
        android:id="@+id/btnExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:backgroundTint="#29F"
        android:text="Exit Time Trace"
        android:textColor="#3E2723"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.462"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>