<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".goals">

    <EditText
        android:id="@+id/etMinHours"
        android:layout_width="371dp"
        android:layout_height="48dp"
        android:layout_marginBottom="272dp"
        android:background="@android:color/white"
        android:hint="@string/enter_minimum_hours"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etMaxHours"
        android:layout_width="369dp"
        android:layout_height="48dp"
        android:layout_below="@id/etMinHours"
        android:layout_marginBottom="24dp"
        android:background="@android:color/white"
        android:hint="@string/enter_maximum_hours"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etMinHours"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etMaxHours"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#29F"
        android:text="@string/save"
        android:textColor="#3E2723"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnClear"
        app:layout_constraintHorizontal_bias="0.368"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etMinHours"
        app:layout_constraintVertical_bias="0.285" />

    <TextView
        android:id="@+id/tvgoals"
        android:layout_width="310dp"
        android:layout_height="109dp"
        android:hint="@string/daily_goals"
        android:text=""
        android:textColorHint="@color/black"
        android:background="@android:color/white"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/etMaxHours"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.848" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="68dp"
        android:backgroundTint="#29F"
        android:text="@string/clear"
        android:textColor="#3E2723"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etMinHours"
        app:layout_constraintVertical_bias="0.285" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="121dp"
        android:layout_height="156dp"
        app:layout_constraintBottom_toTopOf="@+id/tvgoals"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        android:importantForAccessibility="no" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:backgroundTint="#29F"
        android:textColor="#3E2723"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etMinHours"
        app:layout_constraintVertical_bias="0.558" />


</androidx.constraintlayout.widget.ConstraintLayout>